# tree-xml

./: .envrc  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: benches.rs
resources/: definition.xml  join.xml  large.xml  scores.xml  winner.xml
src/: error.rs  lib.rs  node.rs  traits.rs
